name:                hakyll-bootstrap
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
category:            Web
author:              Ben Ford
maintainer:          ben@perurbis.com
build-type:          Simple
cabal-version:       >=1.20

executable blog
  default-language:    Haskell2010
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:
      base       >= 4.8 && <4.9
    , containers >= 0.5 && <0.6
    , filepath   >= 1.4.0
    , pandoc     >= 1.12
    , pandoc-types >= 1.12
    , hakyll     >= 4.5
    , transformers >= 0.3